--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     hello world
+
+    <h1>welcome to car rental</h1>
     <script src="./js/script.js"></script>
 </body>
 </html>
